--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <body>
     <section id="Solarsystem">
-        <div class="background">
+        <div class="sun"></div>
+        <div class="mercury_orbit">
+            <div class="mercury"></div>
+        </div>
+        <div class="venus_orbit">
             <div class="venus"></div>
-            <div class="background1">
-                <div class="mercury"></div>
-                <div class="background2">
-                    <div class="earth">
-                        <div class="orbit">
-                            <div class="moon"></div>
-                        </div>
-                    </div>
-                    <div class="sun"></div>
+        </div>
+        <div class="earth_orbit">
+            <div class="earth">
+                <div class="orbit">
+                    <div class="moon"></div>
                 </div>
             </div>
         </div>
